--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "enginges": {
-    "node": "8.1.1",
-    "npm": "5.0.3"
+  "engines": {
+    "node": "8.10.0",
+    "npm": "5.8.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
