--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "is-https": "^1.0.0",
+    "mongoose": "^5.0.15",
     "nodemon": "^1.17.3",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
